--- a/armes.html
+++ b/armes.html
@@ -24,7 +24,7 @@
                 <p>La Neon SMG est une arme semi-automatique qui tire des balles à haute vitesse.</p>
                 </section></a>
         <a href = CanonPlasma.html><section>
-            <h2>Canon Plasma</h2>
+            <h2>Canon Plasma <strong id = "unavailable">Cette page est actuellement indisponible</strong></h2>
             <p>Le Canon Plasma est une arme lourde qui tire des projectiles de plasma à haute énergie.</p>
         </section></a>
         <a href="HyperLaserGuns.html"><section>
@@ -35,4 +35,3 @@
         <footer>
             <p>&copy; 2026 NebulaForge Studio. Tous droits réservés.</p>
         </footer>
-            
