--- a/items.html
+++ b/items.html
@@ -17,12 +17,12 @@
                     <h2>Armes</h2>
                     <p>Découvrez les différentes armes disponibles dans Neon Duel Zone, chacune avec ses propres statistiques, avantages et inconvénients. Apprenez à maîtriser chaque arme pour maximiser votre efficacité en combat.</p>
                 </section></a>
-                <a href="gadgets.html"><section id="gadgets">
-                    <h2>Gadgets</h2>
+                <a href="gadgets.html"><section id="Gadgets">
+                    <h2>Gadgets <strong id = "unavailable">Cette page est actuellement indisponible</strong></h2>
                     <p>Explorez les gadgets innovants qui peuvent vous donner un avantage tactique sur le champ de bataille. Des boucliers énergétiques aux dispositifs de camouflage, chaque gadget a un rôle crucial à jouer.</p>
                 </section></a>
-                <a href="consommables.html"><section id="Consommables">
-                    <h2>Consommables</h2>
+                <a href="consommables.html"></a><section id="Consommables">
+                    <h2>Consommables <strong id = "unavailable">Cette page est actuellement indisponible</strong></h2>
                     <p>Les consommables sont essentiels pour survivre et prospérer dans Neon Duel Zone. Découvrez les différents types de consommables, leurs effets et comment les utiliser stratégiquement pendant les combats.</p>
                 </section></a>
             </main>
