--- a/armes.html
+++ b/armes.html
@@ -23,8 +23,8 @@
                 <h2>Neon SMG</h2>
                 <p>La Neon SMG est une arme semi-automatique qui tire des balles à haute vitesse.</p>
                 </section></a>
-        <a href = CanonPlasma.html><section>
-            <h2>Canon Plasma <strong id = "unavailable">Cette page est actuellement indisponible</strong></h2>
+        <a href = Canonplasma.html><section>
+            <h2>Canon Plasma</h2>
             <p>Le Canon Plasma est une arme lourde qui tire des projectiles de plasma à haute énergie.</p>
         </section></a>
         <a href="HyperLaserGuns.html"><section>
@@ -35,3 +35,4 @@
         <footer>
             <p>&copy; 2026 NebulaForge Studio. Tous droits réservés.</p>
         </footer>
+
