Fix HTML structure and update Canon à Plasma section

--- a/armes.html
+++ b/armes.html
@@ -24,8 +24,8 @@
                 <p>La Neon SMG est une arme semi-automatique qui tire des balles à haute vitesse.</p>
                 </section></a>
         <a href = Canonplasma.html><section>
-            <h2>Canon Plasma</h2>
-            <p>Le Canon Plasma est une arme lourde qui tire des projectiles de plasma à haute énergie.</p>
+            <h2>Canon à Plasma</h2>
+            <p>Le Canon à Plasma est une arme lourde qui tire des projectiles de plasma à haute énergie.</p>
         </section></a>
         <a href="HyperLaserGuns.html"><section>
             <h2>HyperLaserGuns</h2>
@@ -35,4 +35,5 @@
         <footer>
             <p>&copy; 2026 NebulaForge Studio. Tous droits réservés.</p>
         </footer>
+
 
